--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+:root {
+  --azul-principal: rgb(0, 125, 241);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: 'Roboto', Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: whitesmoke;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-container {
+  background-color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+}
+
+.navbar li {
+  float: left;
+}
+
+.navbar li a {
+  display: block;
   color: white;
+  text-align: center;
+  padding: 16px 16px;
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar li a:hover {
+  background-color: var(--azul-principal)
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  background-color: whitesmoke;
+  text-align: center;
+  padding: 1px;
+  min-height: 50px;
+}
+
+main {
+  min-height: 82vh;
 }
