Add register component

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   --azul-principal: rgb(0, 125, 241);
 }
 
+h1, h2, h3 {
+  text-align: center;
+}
+
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
   margin: 0;
@@ -11,6 +15,11 @@ body {
 
 .main-container {
   background-color: white;
+  max-width: 800px;
+  margin: 10px auto;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .navbar {
@@ -19,6 +28,8 @@ body {
   padding: 0;
   overflow: hidden;
   background-color: black;
+  border-radius: 5px;
+
 }
 
 .navbar li {
@@ -41,9 +52,69 @@ footer {
   background-color: whitesmoke;
   text-align: center;
   padding: 1px;
-  min-height: 50px;
+  min-height: 0;
 }
 
 main {
-  min-height: 82vh;
+  min-height: 75vh;
+  padding: 10px 20px;
+}
+
+.error {
+  color: red;
+  font-size: small;
+}
+
+.notification {
+  position: relative;
+  background-color: white;
+  border: 1px solid grey;
+  color: grey;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+}
+
+.close-btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 14px;
+  color: #999;
+  cursor: pointer;
+}
+
+.center-box {
+  max-width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+}
+
+.form-group {
+  margin-bottom: 15px;
+  display:flex;
+}
+
+input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  width:100%;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: var(--azul-principal);
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  width:100%;
+  margin-bottom: 10px;
+}
+
+button:disabled {
+  background-color: #999;
+  cursor: not-allowed;
 }
